# binson-c

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile.in  README.md  binson.cbp  binson.cbp.mak  binson.depend  binson.layout  binson.workspace  binson.workspace.layout  binson.workspace.mak
docs/: Doxyfile
docs/html/: annotated.html  annotated.js  binson_8h.html  binson_8h.js  binson_8h_source.html  binson__config_8h.html  binson__config_8h.js  binson__config_8h_source.html  binson__error_8h.html  binson__error_8h.js  binson__error_8h_source.html  binson__io_8h.html  binson__io_8h.js  binson__io_8h_source.html  binson__parser_8c.html  binson__parser_8h.html  binson__parser_8h.js  binson__parser_8h_source.html  binson__strstack_8h.html  binson__strstack_8h.js  binson__strstack_8h_source.html  binson__utf8_8h.html  binson__utf8_8h.js  binson__utf8_8h_source.html  binson__util_8c.html  binson__util_8c.js  binson__util_8h.html  binson__util_8h.js  binson__util_8h_source.html  binson__writer_8c.html  binson__writer_8c.js  binson__writer_8h.html  binson__writer_8h.js  binson__writer_8h_source.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_vars.html  (+47 more)
docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_6.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  functions_1.js  search.js  typedefs_0.js  typedefs_1.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
docs/latex/: annotated.tex  binson_8h.tex  binson__config_8h.tex  binson__error_8h.tex  binson__io_8h.tex  binson__parser_8c.tex  binson__parser_8h.tex  binson__strstack_8h.tex  binson__utf8_8h.tex  binson__util_8c.tex  binson__util_8h.tex  binson__writer_8c.tex  binson__writer_8h.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  refman.tex  struct__binson__error.tex  struct__binson__io__bytebuf__struct__t.tex  struct__binson__io__strbuf__struct__t.tex  struct__binson__node__t.tex  struct__binson__node__val__t_1_1v__data.tex  struct__binson__strstack__t.tex  structbinson__.tex  structbinson__error__rec__.tex  structbinson__io__.tex  structbinson__traverse__cb__param__.tex  structbinson__traverse__cb__param___1_1in__param_1_1dump.tex  structbinson__traverse__cb__status__.tex  structbinson__writer__.tex  todo.tex  union__binson__io__struct__t.tex  union__binson__node__val__composite__t.tex  union__binson__node__val__t.tex  unionbinson__traverse__cb__param___1_1in__param.tex  unionbinson__traverse__cb__param___1_1out__param.tex
docs/man/man3/: _binson_error.3  _binson_io_bytebuf_struct_t.3  _binson_io_strbuf_struct_t.3  _binson_io_struct_t.3  _binson_node_t.3  _binson_node_val_composite_t.3  _binson_node_val_t.3  _binson_node_val_t_v_data.3  _binson_strstack_t.3  _home_kotomysha_binson_binson_src_.3  binson.h.3  binson_.3  binson_config.h.3  binson_error.h.3  binson_error_rec_.3  binson_io.h.3  binson_io_.3  binson_parser.c.3  binson_parser.h.3  binson_strstack.h.3  binson_traverse_cb_param_.3  binson_traverse_cb_param__in_param.3  binson_traverse_cb_param__in_param_dump.3  binson_traverse_cb_param__out_param.3  binson_traverse_cb_status_.3  binson_utf8.h.3  binson_util.c.3  binson_util.h.3  binson_writer.c.3  binson_writer.h.3  binson_writer_.3  todo.3
docs/rtf/: dir_68267d1309a1af8e8297ef4c3efbcdba.rtf  refman.rtf
example/: CMakeLists.txt  common.c  common.h  debug_features.c  lib_features.c  output_model_dom.c  pot_1.c  recycle.c  reproduce_bug.c  writer_standalone.c
examples/: ValgrindOut.xml  cachegrind.out.4426  common.c  common.h  debug_features.c  direct_gen.c  examples.cbp  examples.cbp.mak  examples.depend  examples.layout  gmon.out  lib_features.c  output_model_dom.c  pot_1.c  pot_1_in.bson  pot_1_out.bson  recycle.bson  recycle.c  writer_standalone.c
include/binson/: binson.h  binson_common.h  binson_error.h  binson_io.h  binson_parser.h  binson_token_buf.h  binson_writer.h
src/: binson.c  binson.h  binson_common.c  binson_common.h  binson_common_pvt.c  binson_common_pvt.h  binson_config.h  binson_config.h.in  binson_error.c  binson_error.h  binson_io.c  binson_io.h  binson_parser.c  binson_parser.h  binson_strstack.c  binson_strstack.h  binson_token_buf.c  binson_token_buf.h  binson_utf8.c  binson_utf8.h  binson_util.c  binson_util.h  binson_writer.c  binson_writer.h
test/: CMakeLists.txt  btest.c  btest.h
test/fuzz_test/: CMakeLists.txt  fuzz_test.c
test/fuzz_test/binson_fuzzer/: CMakeLists.txt  FuzzGen.java  binson_fuzzer.java  binson_fuzzer.sh
test/utest/: CMakeLists.txt  utest_error.c  utest_highlevel.c  utest_raw.c  utest_token_buf.c  utest_utf8.c  utest_util.c  utest_writer.c
